[bug] display and hide places content according to cutoff

--- a/client/css/stylesheet.css
+++ b/client/css/stylesheet.css
@@ -639,6 +639,16 @@ button:hover {
   position: relative;
 }
 
+.winner-details {
+  font-size:13pt;
+  text-align:center;
+}
+
+.winner-headline {
+  text-align:center;
+  font-size:20pt;
+}
+
 .yelp-redirect {
   background-color:#7482b5;
   color:#fff;
